--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
 <body>
     <h1>CALCULADORA FINANCIERA</h1>
     <div class="result">
-        <input type="text" class="resultDislpay">
+        <div class="Display">0</div>
     </div>
     <div class="buttons">
         <div>
             <section class="oneToThree">
-            <input type="button" id="1" value="1"/>
-            <input type="button" id="2" value="2"/>
-            <input type="button" id="3" value="3"/>
+            <input type="button" id="n1" value="1"  onclick="printNumber()"/>
+            <input type="button" id="n2" value="2"  onclick="printNumber()"/>
+            <input type="button" id="n3" value="3"  onclick="printNumber()"/>
         </section>
         <section class="fourToSix">
-            <input type="button" id="4" value="4"/>
-            <input type="button" id="5" value="5"/>
-            <input type="button" id="6" value="6"/>
+            <input type="button" id="n4" value="4" onclick="printNumber()"/>
+            <input type="button" id="n5" value="5" onclick="printNumber()"/>
+            <input type="button" id="n6" value="6"  onclick="printNumber()"/>
         </section>
         <section class="sevenToNine">
-            <input type="button" id="7" value="7"/>
-            <input type="button" id="8" value="8"/>
-            <input type="button" id="9" value="9"/>
-            <input type="button" id="clear" value="C"/>
+            <input type="button" id="n7" value="7" onclick="printNumber()"/>
+            <input type="button" id="n8" value="8"  onclick="printNumber()"/>
+            <input type="button" id="n9" value="9"  onclick="printNumber()"/>
+            <input type="button" id="clear" value="C" onclick="clear()"/>
+            <input type="button" id="n0" value="0"  onclick="printNumber()"/>
         </section> 
        
             <input class="opButton" type="Button" id="plus" value="+"/>
