--- a/index.html
+++ b/index.html
@@ -10,35 +10,38 @@
 <body>
     <main>
         <div class="calculator">
-            <div id="result"></div>
+            <div id="result">
+                <input type="text" id='screen' disabled= 'true'>
+            </div>
             <div class="buttonContainer">
                 <div class="container">
-                    <div>
-                        <button class="button"  id="n1">1 </button>
-                        <button class="button" id="n2">2 </button>
-                        <button class="button" id="n3" >3</button>  
+                    <div class="container1">
+                        <button class="button"  onclick='addToScreen("1")'   id="n1">1 </button>
+                        <button class="button"  onclick='addToScreen("2")' id="n2">2 </button>
+                        <button class="button"  onclick='addToScreen("3")' id="n3" >3</button>  
                     </div>
-                    <div>
-                        <button class="button" id="n4" >4</button>
-                        <button class="button" id="n5" >5</button>
-                        <button class="button" id="n6">6</button>
+                    <div class="container4">
+                        <button class="button"  onclick='addToScreen("4")' id="n4" >4</button>
+                        <button class="button"  onclick='addToScreen("5")' id="n5" >5</button>
+                        <button class="button"  onclick='addToScreen("6")' id="n6">6</button>
                     </div>
-                    <div>
-                        <button class="button" id="n7" >7</button> 
-                        <button class="button" id="n8" >8</button>
-                        <button class="button" id="n9" >9</button>
+                    <div class="container2">
+                        <button class="button"  onclick='addToScreen("7")' id="n7" >7</button> 
+                        <button class="button"  onclick='addToScreen("8")' id="n8" >8</button>
+                        <button class="button"  onclick='addToScreen("9")' id="n9" >9</button>
                     </div>
-                    <div>
-                        <button id="clear" >C</button>
-                        <button class="button" id="n0"  >0</button>
-                        <button id="equal">=</button>
+                    <div class="container3">
+                        <button id="cleaner" >C</button>
+                        <button class="button"  onclick='addToScreen("0")' id="n0"  >0</button>
+                        <button id="equal" onclick='result()'>=</button>
                     </div>
                 </div>    
                     <div class="opContainer">
-                     <button class="opButton"  id="plus" >+</button>
-                     <button class="opButton"  id="minus"  >-</button>
-                     <button class="opButton"  id="divide"  >/</button>
-                     <button class="opButton"  id="multiply" >*</button>
+                     <button class="opButton" id='delete'> # </button>
+                     <button class="opButton" onclick='addToScreen("+")'  id="plus" >+</button>
+                     <button class="opButton" onclick='addToScreen("-")'  id="minus"  >-</button>
+                     <button class="opButton" onclick='addToScreen("/")'  id="divide"  >/</button>
+                     <button class="opButton" onclick='addToScreen("*")'  id="multiply" >*</button>
                     </div>
                
             </div>
